<resources>
    <string name="app_name">TRENA</string>

    <string name="title_public_work_list">Lista de obras</string>
    <string name="title_survey_details_list">Nº 1222258</string>
    <string name="title_survey_type_list">Tipo de vistoria: Pavimentação</string>
    <string name="title_survey_type_name">Pavimentação</string>
    <string name="title_public_inspection_list">Lista de vistorias</string>
    <string name="title_public_work_filter">Filtrar</string>
    <string name="title_public_work_add">Adicionar obra</string>
    <string name="title_public_work_edit">Editar obra</string>
    <string name="title_public_work_send">Enviar dados</string>
    <string name="title_add_photo">Adicionar mais fotos</string>
    <string name="title_create_account">Cadastrar</string>

    <string name="hint_login_email">Entre um email válido</string>
    <string name="hint_login_password">Digite sua senha …</string>
    <string name="hint_search_field">Pesquisar por alguma obra específica</string>
    <string name="hint_search_survey_field">Pesquisar por alguma vistoria específica</string>
    <string name="hint_confirm_password">Confirme sua senha …</string>

    <string name="button_login">Entrar</string>
    <string name="button_edit">Editar</string>
    <string name="button_add_comment">Adicionar comentário da obra</string>
    <string name="button_update_comment">Atualizar comentário da obra</string>
    <string name="button_add_photo">Adicionar foto</string>
    <string name="button_confirm_photo">Confirmar foto</string>
    <string name="button_add">Adicionar</string>
    <string name="button_add_location_valid">Atualizar localização</string>
    <string name="button_add_location_invalid">Validar localização</string>
    <string name="button_confirm_location">Confirmar localização</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_delete_photo">Deletar foto</string>
    <string name="button_change_photo">Trocar foto</string>
    <string name="button_enter_with_google">Entre com Google</string>
    <string name="button_enter_with_facebook">Entre com Facebook</string>
    <string name="button_enter_with_twitter">Entre com Twitter</string>
    <string name="button_send_data">Enviar dados</string>
    <string name="button_confirm">Confirmar</string>
    <string name="button_continue">Continuar</string>
    <string name="button_try_again">Tentar novamente</string>
    <string name="button_create_account">Cadastrar</string>
    <string name="button_cancel_collect">Descartar mudanças</string>

    <string name="menu_search">Pesquisar</string>
    <string name="menu_filter">Filtrar</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_send">Enviar</string>
    <string name="menu_add">Adicionar</string>
    <string name="menu_list">Obras</string>
    <string name="menu_survey">Vistorias</string>
    <string name="menu_home">Home</string>

    <string name="label_email">Email</string>
    <string name="label_password">Senha</string>
    <string name="label_type_of_work">Tipo de obra</string>
    <string name="label_work_state">Estado da obra</string>
    <string name="label_name_of_work">Nome da obra</string>
    <string name="label_type_of_survey">Tipo de vistoria</string>
    <string name="label_survey_state">Estado da vistoria</string>
    <string name="label_street">Rua</string>
    <string name="label_cep">CEP</string>
    <string name="label_number">Número</string>
    <string name="label_neighborhood">Bairro</string>
    <string name="label_city">Cidade</string>
    <string name="label_order_by">Ordenar por</string>
    <string name="label_search_address">Clique para buscar endereço</string>
    <string name="label_click_to_select_type_of_work">Clique para selecionar tipo de obra …</string>
    <string name="label_click_to_select_work_state">Clique para selecionar o estado da obra …</string>
    <string name="label_click_to_select_survey_state">Clique para selecionar o tipo da vistoria …</string>
    <string name="label_loading_address">Buscando endereço</string>
    <string name="lavel_public_work_state">Estado dos dados das obras</string>
    <string name="lavel_public_survey_state">Estado dos dados das vistorias</string>
    <string name="label_add_comment_hint">Adicionar comentário da foto…</string>
    <string name="label_default_distance">-- m</string>
    <string name="label_default_number">nº 1222258</string>
    <string name="label_if_prefer">se preferir</string>
    <string name="label_public_work_comments">Comentário da obra</string>
    <string name="label_confirm_password">Confirmar senha</string>

    <string name="radio_order_by_name_a_z">Ordem alfabética (A-Z)</string>
    <string name="radio_order_by_name_z_a">Ordem alfabética (Z-A)</string>
    <string name="radio_order_by_name_distance">Distância da obra</string>
    <string name="radio_order_by_name_protocol">Numero de protocolo</string>

    <string name="checkbox_complete">Coleta para enviar</string>
    <string name="checkbox_sent">Informações para atualizar</string>

    <string name="text_empty_public_work_list">Lista de obras vazia, tente adicionar uma nova obra manualmente.</string>
    <string name="text_empty_public_inspection_list">Lista de vistorias vazia, clique no + para adicionar uma nova.</string>
    <string name="text_empty_collect_list">Lista de dados para enviar vazia, tente realizar coletas ou atualizar informações das obras</string>
    <string name="text_welcome">Bem-vindo(a) ao TRENA, o aplicativo de fiscalização de obras do Ministério Público do Estado de Minas Gerais</string>
    <string name="text_loading_login">Realizando login …</string>
    <string name="text_click_to_photo">Clique para adicionar foto</string>
    <string name="text_loading">Carregando …</string>
    <string name="text_move_map">Mova o mapa para selecionar a localização da obra.</string>
    <string name="text_to_send">Para enviar: %s</string>
    <string name="text_sending">Enviando: %s</string>
    <string name="text_create_account">Não tem conta? Cadastre aqui</string>

    <string name="dialog_type_photo_title">Selecionar o tipo da foto</string>
    <string name="dialog_type_work_title">Selecionar o tipo da obra</string>
    <string name="dialog_type_work_filter_title">Selecionar o tipo das obras</string>
    <string name="dialog_work_status">Selecionar status da obra</string>
    <string name="dialog_delete_collect">Deletar coleta</string>
    <string name="dialog_delete_collect_message">A coleta deletada não podera ser restaurada, deseja continuar?</string>
    <string name="dialog_delete_photo">Deletar foto</string>
    <string name="dialog_delete_photo_message">A foto deletada não podera ser restaurada, deseja continuar?</string>

    <string name="snackbar_photo_add_success">Foto atualizada com sucesso</string>
    <string name="snackbar_photo_add_canceled">Usuário cancelou ação</string>

    <string name="single_collect">Coleta</string>
    <string name="single_public_work">Obra pública</string>
    <string name="single_public_work_data">Novos dados obra pública</string>

    <string name="format_progress">%d %%</string>

    <string name="progress_loading_public_work">Carregando informações da obra da base de dados local</string>
    <string name="progress_sending_public_work">Enviando dados da obra para o servidor</string>
    <string name="progress_public_work_sent">Obra pública enviada para o servidor</string>
    <string name="progress_loading_collect">Carregando coleta da base de dados local</string>
    <string name="progress_sending_collect">Enviando dados da coleta para o servidor</string>
    <string name="progress_loading_photos">Carregando fotos da base de dados local</string>
    <string name="progress_sending_photo">Enviando foto %d de %d</string>
    <string name="progress_finishing_upload">Finalizando trabalhos</string>
    <string name="progress_success_upload">Dados enviados com sucesso!</string>
    <string name="progress_fail_upload">Erro ao enviar dados para o servidor :(</string>
    <string name="progress_running_upload">Dados sendo enviados</string>
    <string name="progress_check_version">Verificando versão: %s</string>
    <string name="progress_update">Atualizando: %s</string>
    <string name="progress_fail_download">Falha ao baixar: %s</string>
    <string name="progress_fail_server">Falha ao comunicar com o servidor</string>
    <string name="progress_starting_download_data">Iniciando atualização de dados</string>
    <string name="progress_download_failed_try_again">Falha ao atualizar os dados, tentar novamente?</string>

    <string name="home_option_list">Lista de obras</string>
    <string name="home_option_survey">Vistorias</string>
    <string name="home_option_new">Adicionar nova obra</string>
    <string name="home_option_send">Enviar dados</string>
    <string name="home_option_help">Ajuda</string>
    <string name="home_option_exit">Sair</string>

    <string name="message_collect_updated">Informações atualizadas</string>
    <string name="message_fail_to_authenticate">Falha ao autenticar usuário</string>
    <string name="message_user_created">Usuário criado com sucesso</string>
    <string name="message_user_creation_failed">Falha ao criar usuário</string>

    <string name="error_create_account_email">Email inválido</string>
    <string name="error_create_account_password_different">Senhas diferentes</string>
    <string name="error_create_account_password_empty">Favor preencher ambos os campos de senha</string>

    <string name="progress_type_work">tipos de obras</string>
    <string name="progress_association">relacionamentos</string>
    <string name="progress_public_work">obras públicas</string>
    <string name="progress_inspection">vistorias</string>
    <string name="progress_type_photo">tipos de fotos</string>
    <string name="progress_work_status">status de obras</string>
    <string name="progress_city">cidades</string>

    <string name="span_create_account">Cadastre aqui</string>

    <string name="item_survey_title_fragment"> Tipo de vistoria: Pavimentação</string>
    <string name="item_survey_subTitle_fragment">Av. Amazonas, 5154 - Nova Suíça Belo Horizonte - 30421-056</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">Hello blank fragment</string>
    <string name="second_fragment_label">Hello blank fragment</string>




</resources>
