<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:title="@string/menu_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/inspection_graph"
        android:icon="@drawable/ic_list"
        android:orderInCategory="2"
        android:title="@string/menu_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/inspectionFilterFragment"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="3"
        android:title="@string/menu_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/publicWorkCrudMapFragment"
        android:icon="@drawable/ic_map_marker"
        android:orderInCategory="4"
        android:title="@string/menu_map"
        app:showAsAction="always" />

</menu>