<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.screens.login.fragments.LoginFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="org.mpmg.mpapp.ui.viewmodels.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout_loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_default">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="208dp"
                    android:layout_height="73dp"
                    android:layout_marginTop="@dimen/margin_xxxlarge"
                    android:src="@drawable/ic_logo_trena_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/MPAppTheme.InputTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    android:labelFor="@id/editText_loginFragment_userInput"
                    android:text="@string/label_email"
                    app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <EditText
                    android:id="@+id/editText_loginFragment_userInput"
                    style="@style/MPAppTheme.EditText1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_default"
                    android:layout_marginStart="@dimen/margin_xxlarge"
                    android:layout_marginTop="@dimen/margin_xxsmall"
                    android:layout_marginEnd="@dimen/margin_xxlarge"
                    android:hint="@string/hint_login_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/MPAppTheme.InputTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:labelFor="@id/editText_loginFragment_passwordInput"
                    android:text="@string/label_password"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/editText_loginFragment_userInput" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputTextLayout_loginFormFragment_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xxsmall"
                    android:paddingTop="0dp"
                    app:boxBackgroundMode="none"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/button4"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@+id/editText_loginFragment_userInput"
                    app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_loginFragment_passwordInput"
                        style="@style/MPAppTheme.EditText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_login_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="0dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButton"
                    style="@style/MPAppTheme.Button1"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/height_default"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    android:text="@string/button_login"
                    app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_googleSignIn"
                    app:layout_constraintStart_toStartOf="@+id/button_loginFragment_googleSignIn"
                    app:layout_constraintTop_toBottomOf="@+id/inputTextLayout_loginFormFragment_password" />

                <TextView
                    android:id="@+id/textView_loginFragment_createAccount"
                    style="@style/MPAppTheme.Text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/text_create_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialButton" />

                <View
                    android:id="@+id/view"
                    android:layout_width="24dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:background="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@+id/textView15"
                    app:layout_constraintEnd_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toTopOf="@+id/textView15" />

                <View
                    android:layout_width="24dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    android:background="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@+id/textView15"
                    app:layout_constraintStart_toEndOf="@+id/textView15"
                    app:layout_constraintTop_toTopOf="@+id/textView15" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:fontFamily="@font/gotham_rounded_light_italic"
                    android:text="@string/label_if_prefer"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="@+id/materialButton"
                    app:layout_constraintStart_toStartOf="@+id/materialButton"
                    app:layout_constraintTop_toBottomOf="@+id/textView_loginFragment_createAccount" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_loginFragment_googleSignIn"
                    style="@style/MPAppTheme.Button2"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/height_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:backgroundTint="@color/colorWhite"
                    android:drawableLeft="@drawable/ic_google_logo"
                    android:text="@string/button_enter_with_google"
                    android:textColor="@color/label1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_loginFragment_facebookSignIn"
                    style="@style/MPAppTheme.Button2"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/height_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:backgroundTint="@color/buttonFacebookLogin"
                    android:drawableLeft="@drawable/ic_facebook_logo"
                    android:text="@string/button_enter_with_facebook"
                    app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_googleSignIn"
                    app:layout_constraintStart_toStartOf="@+id/button_loginFragment_googleSignIn"
                    app:layout_constraintTop_toBottomOf="@+id/button_loginFragment_googleSignIn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_loginFragment_twitterSignIn"
                    style="@style/MPAppTheme.Button2"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/height_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:backgroundTint="@color/buttonTwitterLogin"
                    android:drawableLeft="@drawable/ic_twitter_logo"
                    android:text="@string/button_enter_with_twitter"
                    app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_facebookSignIn"
                    app:layout_constraintStart_toStartOf="@+id/button_loginFragment_facebookSignIn"
                    app:layout_constraintTop_toBottomOf="@+id/button_loginFragment_facebookSignIn" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlackOpaque"
            android:clickable="false"
            android:visibility="@{loginViewModel.isLoading() ? View.VISIBLE : View.GONE}">

            <ProgressBar
                android:id="@+id/contentLoadingPrograssBar_loginFragment"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorGreenMP"
                android:indeterminateTintMode="src_atop"
                android:max="100"
                android:paddingStart="@dimen/margin_xxlarge"
                android:paddingTop="0dp"
                android:paddingEnd="@dimen/margin_xxlarge"
                android:paddingBottom="@dimen/margin_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/MPAppTheme.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/text_loading_login"
                app:layout_constraintEnd_toEndOf="@+id/contentLoadingPrograssBar_loginFragment"
                app:layout_constraintStart_toStartOf="@+id/contentLoadingPrograssBar_loginFragment"
                app:layout_constraintTop_toBottomOf="@+id/contentLoadingPrograssBar_loginFragment" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

